--- a/app/assets/stylesheets/admin/layout.css.scss
+++ b/app/assets/stylesheets/admin/layout.css.scss
@@ -5,11 +5,11 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('/assets/opensans/OpenSans-Regular-webfont.eot');
-  src: url('/assets/opensans/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-     url('/assets/opensans/OpenSans-Regular-webfont.woff') format('woff'),
-     url('/assets/opensans/OpenSans-Regular-webfont.ttf') format('truetype'),
-     url('/assets/opensans/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
+  src: font-url('opensans/OpenSans-Regular-webfont.eot');
+  src: font-url('opensans/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+     font-url('opensans/OpenSans-Regular-webfont.woff') format('woff'),
+     font-url('opensans/OpenSans-Regular-webfont.ttf') format('truetype'),
+     font-url('opensans/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
