[FIX] Other fonts in CSS.

--- a/app/assets/stylesheets/admin/bootstrap/themes/deepblue/_variables.scss
+++ b/app/assets/stylesheets/admin/bootstrap/themes/deepblue/_variables.scss
@@ -84,7 +84,7 @@ $headings-color:          inherit !default;
 // Iconography
 // -------------------------
 
-$icon-font-path:          "/assets/glyphicons/" !default;
+$icon-font-path:          "glyphicons/" !default;
 $icon-font-name:          "glyphicons-halflings-regular" !default;
 
 
